--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,8 @@
 cmake_minimum_required(VERSION 3.6)
 project(testApp)
+set(LWTV_H 
+	"tvec3.h"
+	"tmat3.h"
+	"tmat4.h"
+)
 add_executable(tester tester.C)
